# mongopype

./: LICENSE  PUBLISH.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/: main.py
src/mongopype/: __init__.py  builder.py  pipeline.py  types.py  verify.py
src/mongopype/stages/: add_fields.py  bucket.py  bucket_auto.py  change_stream.py  change_stream_split_large_event.py  coll_stats.py  count.py  current_op.py  densify.py  documents.py  facet.py  fill.py  geo_near.py  graph_lookup.py  group.py  index_stats.py  limit.py  list_cluster_catalog.py  list_local_sessions.py  list_sampled_queries.py  list_search_indexes.py  list_sessions.py  lookup.py  match.py  merge.py  out.py  (+23 more)
tests/: conftest.py  test_builder.py  test_pipeline.py  test_verify.py
tests/stages/: test_add_fields.py  test_bucket.py  test_bucket_auto.py  test_change_stream.py  test_change_stream_split_large_event.py  test_coll_stats.py  test_count.py  test_current_op.py  test_densify.py  test_documents.py  test_facet.py  test_fill.py  test_geo_near.py  test_graph_lookup.py  test_group.py  test_index_stats.py  test_limit.py  test_list_cluster_catalog.py  test_list_local_sessions.py  test_list_sampled_queries.py  test_list_search_indexes.py  test_list_sessions.py  test_lookup.py  test_match.py  test_merge.py  test_out.py  test_plan_cache_stats.py  test_project.py  test_query_settings.py  test_query_stats.py  test_rank_fusion.py  test_redact.py  test_replace_root.py  test_replace_with.py  test_sample.py  test_score.py  test_score_fusion.py  test_search.py  test_search_meta.py  test_set.py  (+9 more)
