[build-system]
requires = ["uv_build >= 0.9.8, <0.10.0"]
build-backend = "uv_build"

[project]
name = "mongopype"
version = "0.1.0"
authors = [{ name = "Omer Cohen", email = "omercotkd+mongopype@gmail.com" }]
description = "Pythonic builder for MongoDB aggregation pipelines"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]
dependencies = [
    "pymongo",
]

[project.urls]
Homepage = "https://github.com/omercotkd/mongopype"
Issues = "https://github.com/omercotkd/mongopype/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]


